Add help, update README, add LICENSE (BSD3)

--- a/app/partials/help.html
+++ b/app/partials/help.html
@@ -1,1 +1,18 @@
-<p>Help partial</p>
+<h2>Help</h2>
+
+<p>Jotto is a word and logic game for two players. Each player chooses a 5-letter English dictionary word -- no proper names or acronyms -- which is kept secret.</p>
+<p>Then the players take turns guessing 5-letter (English, dictionary) words. Their opponent responds with the number of letters the guessed word has in common with their secret word, ignoring the positions of the letters.</p>
+<p>A few examples. Suppose my secret word is LIGHT.
+  <ul>
+    <li>My opponent guesses SHOES, and I respond "1", because both words contain an H.</li>
+    <li>If the guess is BUILD, I would respond "2".</li>
+    <li>If the guess is FACES, I would respond "0".</li>
+    <li>If the guess is TREAT, I would respond "1". Note that double letters are ignored.</li>
+  </ul>
+</p>
+
+<p>To aid in working out an opponent's secret word, players have a (secret) set of letters and a notepad. They can make arbitrary notes on the notepad, and cycle letters between black (normal), red, green and blue by clicking on them. The meaning of the colours is up to you; the alphabet is intended to help keep track of letters would have eliminated or which are certainly in your opponent's word.</p>
+
+<p>You can be engaged in multiple games at once, and they will all appear in the lobby. You can send an invite to another player from the lobby, and see any incoming invites from there as well.</p>
+
+<p>This software was written by Braden Shepherdson in 2012. The game of Jotto was designed in 1955 by Morton M. Rosenfeld and is copyright of Selchow and Righter. The source code is available on <a href="https://github.com/shepheb/jotto">Github</a> under the BSD3 license.</p>
